// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should show expense summary component with 1 expense 1`] = `
<div>
  <h3>
    viewing 
    1
     
    expense
     totaling 
    $1.00
  </h3>
</div>
`;

exports[`should show expense summary component with multiple expenses 1`] = `
<div>
  <h3>
    viewing 
    5
     
    expenses
     totaling 
    $1.00
  </h3>
</div>
`;
